--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile files('build/lib/Parse-1.9.1.jar')
+    compile files('build/lib/ParseFacebookUtilsV4-1.9.1.jar')
+    compile files('build/lib/ParseCrashReporting-1.9.1.jar')
+    compile files('build/lib/bolts-android-1.2.0.jar')
 }
