Added parse SDK

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile files('build/lib/ParseFacebookUtilsV4-1.9.1.jar')
     compile files('build/lib/ParseCrashReporting-1.9.1.jar')
     compile files('build/lib/bolts-android-1.2.0.jar')
+    compile 'com.parse.bolts:bolts-android:1.+'
+    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
 }
