--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".ChooseFoodActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChooseFoodActivity" />
         <activity android:name=".AddFoodActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".LoginActivity" >
