--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ buildscript {
 }
 
 allprojects {
+     tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked"
+     }
+
     repositories {
         jcenter()
     }
